apps/pinchflat/deployment-pinchflat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pinchflat
  name: pinchflat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pinchflat
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pinchflat
    spec:
      containers:
        - image: ghcr.io/kieraneglin/pinchflat:latest@sha256:01b4f98aabaf3f5fe394213f7a32578c9e84e42080f52e2f8334021a4473b202  # because there is no alternative to latest tag. prject is not actively maintained.
          name: pinchflat
          resources:
            requests:
              memory: 220Mi
          ports:
            - containerPort: 8945
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: pinchflat
            - mountPath: /downloads
              name: library
              subPath: youtube
      restartPolicy: Always
      volumes:
        - name: pinchflat
          persistentVolumeClaim:
            claimName: pinchflat
        - name: library
          persistentVolumeClaim:
            claimName: plex-library
