apps/pinchflat/service-pinchflat.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pinchflat
  name: pinchflat
spec:
  ports:
    - port: 8945
      targetPort: 8945
  selector:
    app: pinchflat
